fixed z-index (#196)
* fixed z-index

* change position for close button for filters

* add condition to pagination

* change "No products found block"

* fixed layout for login button

* fixed filter labels

* add contact us button and redirect to form

* fix margin in filters

* filterToClose improve close button

* remove zoom for images from phone screen

* small fixed with layout

--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,8 @@ table {
     /* svg */
     --yellow-star: #ffc633;
     --green-check: #01ab31;
+    --lightblue-color: #dae1ff;
+    --darkblue-color: #7588df;
 }
 /* fonts */
 
